# py-final-online-cinema-mate-project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: app.py
src/api/routers/: accounts.py
src/config/: settings.py
src/database/: session.py
src/database/models/: accounts.py
src/schemas/: accounts.py
src/security/: jwt.py  passwords.py
src/services/: accounts.py  mailer.py
tests/: conftest.py
