[tool.poetry]
name = "online-cinema"
version = "0.1.0"
description = "Online Cinema API (FastAPI)"
authors = ["Roman Azhniuk"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"

sqlalchemy = "^2.0.30"
psycopg = {extras=["binary"], version="^3.1.19"}
alembic = "^1.13.2"

python-jose = {extras=["cryptography"], version="^3.3.0"}
passlib = {extras=["bcrypt"], version="^1.7.4"}

httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
mypy = "^1.10.0"
ruff = "^0.5.0"
types-passlib = "^1.7.7.20240311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
src = ["src", "tests"]
